# cnc_app

./: .gitignore  README.md  api.py  create_test_image.py  cut_types.py  dxf_generator.py  entity_model.py  fabrication_advisor.py  gui.py  holes.py  interactive_editor.py  layers.py  main.py  nesting.py  panel_decomposition.py  patterns.py  preview_engine.py  pyproject.toml  requirements.txt  run_tests.py  shapes.py  simple_test.py  slicer.py  test_box.dxf  test_channel.dxf  test_deps.py  test_dxf.py  test_final.dxf  test_gui_integration.dxf  test_l_bracket.dxf  test_photo_dxf.py  test_photo_dxf_v2.py  test_preview.py  test_template_with_flanges.dxf  tool_compensation.py  validation.py  vectorizer.py
.claude/: settings.local.json
cnc-frontend/: .gitignore  package-lock.json  package.json
cnc-frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
cnc-frontend/lib/: api.ts
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  types.ts  utils.ts
output/gui/: box_flat_pattern.dxf  channel_flat_pattern.dxf  flanged_panel.dxf  l_bracket_flat_pattern.dxf  rectangle.dxf  test_bug_rect.dxf  test_flange_rect.dxf  test_flanged_panel.dxf
output/tests/: 10_l_bracket_flat_pattern.dxf  11_channel_flat_pattern.dxf  1_rectangle_outer_no_compensation.dxf  1_rectangle_outer_with_compensation.dxf  2_rectangle_inner_inside_compensation.dxf  3_panel_4_corner_holes.dxf  4_panel_grid_holes.dxf  4_panel_grid_holes_with_compensation.dxf  (+6 more)
tests/: test_api.py  test_editor_operations.py  test_entity_model.py  test_slicer.py
(+18 files in other folders)
