[project]
name = "cnc-app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
    "pydantic>=2.0",
    "starlette>=0.40",
    "Pillow>=10.0",
    "scikit-image>=0.22",
    "openai>=1.3",
]

[tool.vercel]
entrypoint = "api:app"
